--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@types/uuid": "^10.0.0",
     "ngx-chess-board": "^2.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
