chore: firebase setup fixes

--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,7 @@
 {
   "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "public": "dist/chessmaster3k",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
   "database": {
     "rules": "database.rules.json"
